# life-wgpu-rs

./: Cargo.toml  README.md
.cargo/: config.toml
shaders/: life.wgsl  shader.wgsl
src/: app.rs  camera.rs  lib.rs  life.rs  main.rs  shader.rs  text.rs
src/bindable/: camera.rs  cellpos.rs  fieldinfo.rs  fieldstate.rs  mod.rs
src/event_chain/: close_handler.rs  draw_handler.rs  keyboard_handler.rs  mod.rs  mouse_handler.rs
src/model/: mod.rs  quad.rs
